Object_Profile/objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Cost__c</fullName>
        <formula>Cost2__c +  X3rd_Party_Cost_Value__c  + Product_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPQ Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.Contract_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>New Support Package</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost2__c</fullName>
        <formula>IF(ISPICKVAL( Apttus_Config2__LineType__c,&apos;Option&apos;), Apttus_Config2__NetPrice__c ,IF(ISPICKVAL( Apttus_Config2__LineType__c,&apos;Product/Service&apos;), Apttus_Config2__OptionPrice__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost3__c</fullName>
        <formula>(Apttus_Config2__PriceListItemId__r.X3rd_Party_Cost__c * Apttus_Config2__NetPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_Use_Named_User_Formula__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.ESS_Use_Named_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESS Use Named User Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESS_Use_Named_User__c</fullName>
        <label>ESS Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Use_Named_User_Formula__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.Full_Use_Named_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Use Named User Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Use_Named_User__c</fullName>
        <label>Full Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWh_of_Retail_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.GWh_of_Retail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GWh of Retail Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWh_of_Retail__c</fullName>
        <label>GWh of Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401 – 880</fullName>
                </value>
                <value>
                    <fullName>251 – 400</fullName>
                </value>
                <value>
                    <fullName>&lt; 250</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JIC__c</fullName>
        <label>JIC</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Driver_Formula__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.License_Driver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Driver Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Driver__c</fullName>
        <label>License Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Metals / Bulk Metals KTPA</fullName>
                </value>
                <value>
                    <fullName>Coal / Bulk Ore MTPA</fullName>
                </value>
                <value>
                    <fullName>Concurrent Processes</fullName>
                </value>
                <value>
                    <fullName>Concurrent User</fullName>
                </value>
                <value>
                    <fullName>CPU Cores</fullName>
                </value>
                <value>
                    <fullName>Customer/Deal</fullName>
                </value>
                <value>
                    <fullName>Customer Count</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Equipment Monitors</fullName>
                </value>
                <value>
                    <fullName>Facility</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Instance</fullName>
                </value>
                <value>
                    <fullName>Load Flow Buses</fullName>
                </value>
                <value>
                    <fullName>Load Zones</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Pages per Year</fullName>
                </value>
                <value>
                    <fullName>Per Module</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>Portfolio Capacity MWs</fullName>
                </value>
                <value>
                    <fullName>Precious Metals KOzPA</fullName>
                </value>
                <value>
                    <fullName>Asset Count</fullName>
                </value>
                <value>
                    <fullName>Pages</fullName>
                </value>
                <value>
                    <fullName>Production Instance</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Reactor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Metric_MineScape__c</fullName>
        <label>License Metric - MineScape</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Session User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Metric_MineScape_formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.License_Metric_MineScape__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Metric - MineScape formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limited_Use_Named_User_Formula__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.Limited_Use_Named_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limited Use Named User Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limited_Use_Named_User__c</fullName>
        <label>Limited Use Named User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MW_of_Generation_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.MW_of_Generation__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MW of Generation Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MW_of_Generation__c</fullName>
        <label>MW of Generation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2751 – 5000</fullName>
                </value>
                <value>
                    <fullName>1251 – 2750</fullName>
                </value>
                <value>
                    <fullName>426 – 1250</fullName>
                </value>
                <value>
                    <fullName>151 – 425</fullName>
                </value>
                <value>
                    <fullName>76 – 150</fullName>
                </value>
                <value>
                    <fullName>&lt; 75</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>Margin = Extended Price - Cost</description>
        <formula>Apttus_Config2__NetPrice__c  - Product_Cost__c</formula>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Override_Cost__c</fullName>
        <label>Override Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Factor__c</fullName>
        <label>Pricing Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <formula>IF( Apttus_Config2__PriceListItemId__r.Override_Cost__c,  Override_Cost__c ,  X3rd_Party_Cost_Value__c +  Tech_Soft_3D_Hoops_Cost__c )</formula>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.Revenue_Stream__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Stream Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Sub_Type_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.Revenue_Stream_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Stream Sub Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Sub_Type__c</fullName>
        <label>Revenue Stream Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Cyber Security</fullName>
                </value>
                <value>
                    <fullName>Integration Services</fullName>
                </value>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Organizational Change Management</fullName>
                </value>
                <value>
                    <fullName>Reporting Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Partner Lead Services</fullName>
                </value>
                <value>
                    <fullName>Partner Subcontract Services</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Type_Formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.Revenue_Stream_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Stream Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream_Type__c</fullName>
        <label>Revenue Stream Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Licenses</fullName>
                </value>
                <value>
                    <fullName>Additional Licenses/Services</fullName>
                </value>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Customer Funded Development</fullName>
                </value>
                <value>
                    <fullName>Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Extension (+1 or +2 option)</fullName>
                </value>
                <value>
                    <fullName>Extension (other)</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Integration &amp; Reporting Services</fullName>
                </value>
                <value>
                    <fullName>IT Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Mix of Options</fullName>
                </value>
                <value>
                    <fullName>Net New Service</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Partner Services</fullName>
                </value>
                <value>
                    <fullName>Product Optimization Package</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Support Packages</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Licenses</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Soft_3D_Hoops_Cost__c</fullName>
        <formula>IF(( Apttus_Config2__Quantity__c &lt;= 100), Apttus_Config2__PriceListItemId__r.Level_1__c, IF(( Apttus_Config2__Quantity__c &gt; 100 &amp;&amp; Apttus_Config2__Quantity__c &lt;= 250),Apttus_Config2__PriceListItemId__r.Level_2__c,IF(( Apttus_Config2__Quantity__c &gt; 250),Apttus_Config2__PriceListItemId__r.Level_3__c,0.00))) * Apttus_Config2__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech Soft 3D Hoops Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenancy__c</fullName>
        <label>Tenancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi-Tenant</fullName>
                </value>
                <value>
                    <fullName>Sole Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenancy_formula__c</fullName>
        <formula>Text(Apttus_Config2__AttributeValueId__r.Tenancy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenancy formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Cost_Value__c</fullName>
        <description>((Cost on PLI + 3rd Party Cost on PLI  + 3rd Party Per User Cost on PLI )  * Qty) + (3rd Part Cost % * Net Price)</description>
        <formula>((Apttus_Config2__PriceListItemId__r.X3rd_Party_Base_Cost__c + Apttus_Config2__PriceListItemId__r.X3rd_Party_Per_User_Cost__c + Apttus_Config2__PriceListItemId__r.Apttus_Config2__Cost__c) * Apttus_Config2__Quantity__c) + (Apttus_Config2__PriceListItemId__r.X3rd_Party_Cost__c *  Apttus_Config2__NetPrice__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Party Cost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_License_Cost__c</fullName>
        <formula>Cost2__c  +  Cost3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Party License Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Mtnc_Cost_Value__c</fullName>
        <formula>(Apttus_Config2__PriceListItemId__r.X3rd_Party_Mtnc_Cost__c  *  X3rd_Party_License_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Party Mtnc % Cost Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Mtnc_Cost__c</fullName>
        <formula>Apttus_Config2__PriceListItemId__r.X3rd_Party_Mtnc_Base_Cost__c +   X3rd_Party_Mtnc_Cost_Value__c + ( Apttus_Config2__PriceListItemId__r.X3rd_Party_Per_User_Mtnc_Cost__c *  Apttus_Config2__Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Party Mtnc Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>